infra/app-b/app-b-proj.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: team-b-app1-api

---

apiVersion: v1
kind: Namespace
metadata:
  name: team-b-app1-integration
