infra/app-b/app-b-np.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-api
  namespace: team-b-app1-integration
spec:
  podSelector: {}
  ingress:
    - from:
        - podSelector: {}
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: team-b-app1-api
        - podSelector: {}
  policyTypes:
    - Ingress
